<resources>
    <string name="app_name">ChatterBox</string>
    <string name="title_home">Home</string>
    <string name="title_my_circles">My Chatters</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="new_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_submit">Sign Up</string>
    <string name="create">Create</string>
    <string name="upload_photo_or_video">Upload Photo or Video</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_video">Upload Video</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="image_view">image view</string>
    <string name="add_comment">Add Comment</string>
    <string name="description">image loading</string>
    <string name ="create_circle_title">Create Circle</string>"
    <string name="new_circle_name_label">Name</string>"
    <string name="new_circle_description_label">Description</string>"
</resources>