<!-- res/layout/activity_upload.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UploadActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_photo_or_video"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btn_select_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:paddingBottom="8dp" />

    <EditText
        android:id="@+id/edit_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Add a caption"
        android:hint="@string/add_a_caption"
        android:inputType="text"
        android:paddingTop="16dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:paddingTop="16dp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:paddingTop="16dp" />

</LinearLayout>
